# fsh

./: .gitignore  Cargo.toml  Dockerfile  LICENSE_THIRDPARTY  README.md  SECURITY.md  TODO.md  build.sh  setup.sh
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
app/: Cargo.toml
app/src/: macros.rs  main.rs  manifest.rs  profile.rs
crates/fsh-ast/src/: expr.rs  lib.rs  pipe.rs  statement.rs
crates/fsh-common/src/: error.rs  result.rs
crates/fsh-engine/src/: exec.rs  extract.rs  lib.rs  process_handler.rs  sh_vars.rs  state.rs
crates/fsh-engine/src/builtin/: common.rs  unix.rs
crates/fsh-engine/src/pipe/: unix.rs
crates/fsh-parser/src/: lexer.rs  lib.rs  lite_parser.rs  parser.rs  preprocess.rs  token.rs  utils.rs
crates/fsh-terminal/: Cargo.toml
crates/fsh-terminal/src/: ascii.rs  lib.rs  line.rs  prompt.rs  terminal.rs
src/: builtin.rs  error.rs  execute.rs  lexer.rs  lib.rs  main.rs  manifest.rs  parser.rs  pipe.rs  preprocessor.rs  process_handler.rs  profile.rs  prompt.rs  result.rs  sh_vars.rs  state.rs  terminal.rs  token.rs  utils.rs
src/ast/: expression.rs  mod.rs  pipe.rs  statement.rs
src/builtin/: common.rs  mod.rs
src/parser/: lite.rs  lite_parser.rs  parser.rs  prompt_parser.rs
src/pipe/: unix.rs
src/utils/: path.rs
